--- a/app/partials/phone-list.html
+++ b/app/partials/phone-list.html
@@ -10,7 +10,7 @@
           <td colspan="5"> 
           <CENTER>
           <table border="0" style="width: 100%" cellpadding="0" cellspacing="0" class="thumbnail phone-listing">
-            <tr><td colspan="5"><img src="img/BANNER1.JPG"></td></tr>
+            <tr><td colspan="5"><img src="img/BANNER1.jpg"></td></tr>
           </table>
           </CENTER>
           <center>
